Fixed minor formatting issue on mobile devices

--- a/style/main.css
+++ b/style/main.css
@@ -20,8 +20,7 @@ h1.title {
   font-size: 80px;
   font-weight: bold;
   margin: 0;
-  display: block;
-  float: left; }
+  display: block; }
 
 @-webkit-keyframes move-up {
   0% {
